# probescript

./: .gitignore  CMakeLists.txt  LICENSE  a  a.out  lexer.cpp  main.cpp  makefile  parser.cpp  readme.md  test.probe
.github/workflows/: build.yml  release.yml
core/: CMakeLists.txt  context.hpp  env.cpp  env.hpp  errors.cpp  errors.hpp  json.cpp  json.hpp  modules.hpp  threads.cpp  typechecker.cpp  typechecker.hpp  types.hpp  utils.cpp  utils.hpp
core/compiler/: compiler.cpp  compiler.hpp
core/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
core/runtime/: calls.cpp  classes.cpp  interpreter.cpp  interpreter.hpp  loops.cpp  probes.cpp  program.cpp  values.cpp  values.hpp
core/vm/: builder.cpp  builder.hpp  instruction.hpp  values.cpp  values.hpp  vm.cpp  vm.hpp
docs/: classes.md  input_output.md  loops.md  operators.md  standard_library.md  templating.md  types.md
include/: REPL.hpp  ast.hpp  config.hpp  context.hpp  errors.hpp  lexer.hpp  modules.hpp  parser.hpp  repl.hpp  threads.hpp  typechecker.hpp
include/runtime/: env.hpp  eventloop.hpp  interpreter.hpp  values.hpp
include/runtime/eval/: array.hpp  arrowfunction.hpp  assignment.hpp  binexpr.hpp  body.hpp  boolbinop.hpp  call.hpp  classdeclaration.hpp  classdefinition.hpp  fndeclaration.hpp  forstmt.hpp  identifier.hpp  ifstmt.hpp  importstmt.hpp  memberassignment.hpp  memberexpr.hpp  newexpr.hpp  numbinexpr.hpp  object.hpp  probedeclaration.hpp  program.hpp  runprobe.hpp  stringbinexpr.hpp  unarypostfix.hpp  vardeclaration.hpp  whilestmt.hpp
include/stdlib/: array.hpp  console.hpp  datatypes.hpp  date.hpp  fs.hpp  http.hpp  json.hpp  process.hpp  random.hpp  stdlib.hpp
include/stdlib/frame/: frame.hpp  windows.hpp  windowsframe.hpp
include/utils/: isNum.hpp  shift.hpp  split.hpp
lib/runtime/: CMakeLists.txt  exit.c  exit.cpp  memory.c
runtime/: env.cpp  interpreter.cpp  values.hpp
src/: env.cpp  init.cpp  lexer.cpp  main.cpp  modules.cpp  parser.cpp  repl.cpp  threads.cpp  typechecker.cpp  utils.cpp  values.cpp
src/cli/: application.cpp  application.hpp  main.cpp  main.hpp  modules.cpp  modules.hpp  repl.cpp  repl.hpp
src/compiler/: compiler.cpp  compiler.hpp  generator.cpp
src/core/: context.hpp  env.cpp  env.hpp  errors.cpp  errors.hpp  init.hpp  modules.cpp  modules.hpp  threads.hpp  typechecker.cpp  typechecker.hpp  types.hpp  utils.cpp  utils.hpp
src/core/frontend/: ast.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
src/core/runtime/: calls.cpp  classes.cpp  interpreter.cpp  interpreter.hpp  loops.cpp  probes.cpp  program.cpp  values.cpp  values.hpp
src/core/stdlib/: console.hpp  datatypes.hpp  http.cpp  http.hpp  json.hpp  process.hpp  stdlib.cpp  stdlib.hpp
src/installer/: installation.txt  main.cpp  probescript-setup.bat  probescript-setup.sh
src/runtime/: CMakeLists.txt  calls.cpp  classes.cpp  exit.cpp  interpreter.cpp  loops.cpp  probes.cpp  program.cpp
src/standard_lib/: fs.cpp  fs.hpp  globals.cpp  globals.hpp  http.cpp  http.hpp  json.cpp  json.hpp  prbtest.cpp  prbtest.hpp  stdlib.cpp  stdlib.hpp
src/stdlib/: http.cpp  json.cpp
tests/: run-tests.sh
tests/scripts/: Arithmetic-operations.prb  Class-inheritance.prb  Classes-and-instancing.prb  Fibonacci-function.prb  Hello-world.prb  Regex-match.prb  Template-function.prb  While-and-for-loop.prb  classes.prb  fibonacci.prb  inheritance.prb  project.json  templatefn.prb
tests/scripts/fail/: Class-typechecks.prb  Function-signature.prb
utils/: shift.cpp  split.cpp
